day3/netpol/denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
      app: pod2 
  policyTypes:
    - Ingress
    - Egress
